Fix: remove right overflow on mobile

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* Общие стили */
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
